[project]
name = "designing-better-retrieval-units-for-production-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12,<5.0",
    "faiss-cpu>=1.11,<2.0",
    "markdown>=3.7,<4.0",
    "nltk>=3.9,<4.0",
    "numpy>=2.0,<3.0",
    "pandas>=2.2,<4.0",
    "pypdf>=5.0,<7.0",
    "pytest>=8.0,<10.0",
    "python-dotenv>=1.0,<2.0",
    "pyyaml>=6.0,<7.0",
    "scikit-learn>=1.6,<2.0",
    "scipy>=1.13,<2.0",
    "sentence-transformers>=5.0,<6.0",
    "tabulate>=0.9,<1.0",
    "torch>=2.7,<3.0",
    "tqdm>=4.66,<5.0",
    "transformers>=4.50,<6.0",
]
